# particle_simulator

./: .gitignore  CMakeLists.txt
src/: main.cpp  physics.cpp  render.cpp
